correct styles to prevent overflow

--- a/source/styles/blocks/button.scss
+++ b/source/styles/blocks/button.scss
@@ -9,6 +9,7 @@
 
   appearance: none;
   display: grid;
+  flex-shrink: 0;
 
   cursor: pointer;
 
