--- a/source/styles/blocks/course-card.scss
+++ b/source/styles/blocks/course-card.scss
@@ -19,6 +19,7 @@
 
   font-size: $font-size-3;
   font-weight: $font-weight-bold;
+  word-break: break-word;
 }
 
 .course-card__caption {
@@ -26,11 +27,14 @@
 
   font-size: $font-size-s;
   color: var(--color-text-secondary);
+  word-break: break-word;
 }
 
 .course-card__text {
   margin-top: 0;
   margin-bottom: $font-size-xs;
+
+  word-break: break-word;
 }
 
 .course-card__buttons-wrapper {
@@ -54,4 +58,5 @@
   text-transform: lowercase;
   font-size: $font-size-s;
   color: var(--color-text-secondary);
+  word-break: break-word;
 }
