--- a/source/styles/blocks/header.scss
+++ b/source/styles/blocks/header.scss
@@ -108,6 +108,8 @@
 
 
 .header__menu-link {
+  word-break: break-word;
+
   cursor: pointer;
   transition: color $transition-basic;
 
