--- a/source/styles/blocks/projects.scss
+++ b/source/styles/blocks/projects.scss
@@ -47,6 +47,7 @@
   font-family: $font-family-basic;
   font-size: $font-size-2;
   text-align: left;
+  word-break: break-word;
 
   cursor: pointer;
 
