--- a/source/styles/blocks/title.scss
+++ b/source/styles/blocks/title.scss
@@ -4,4 +4,6 @@
   font-weight: $font-weight-bold;
   text-align: center;
   color: var(--color-text-accent);
+
+  word-break: break-word;
 }
